# transferable-tool-adapter

./: .gitignore  README.md  pyproject.toml  requirements-5060-cu128.txt
data/: apibank_eval.jsonl  tool_dataset.json  tool_dataset.txt  toolbench_eval.jsonl
docs/: EXPERIMENTS.md
experiments/: registry.yaml
figures/: plot_data.json
results/: apibank_qwen_full_train.json  apibank_qwen_projected_Alinear_train.json  apibank_source_train.json  cross_model_compat_qwen.json  cross_model_compat_tinyllama.json  distill_train_summary.json  ood_apibank_qwen_full.json  ood_apibank_qwen_hybrid_Alinear.json  ood_apibank_qwen_hybrid_router_prior.json  ood_apibank_qwen_mcpstyle.json  ood_apibank_qwen_mcpstyle_hybrid_Alinear.json  ood_apibank_qwen_nonparam.json  ood_apibank_qwen_projected_Alinear.json  ood_apibank_source.json  ood_distill.json  ood_qwen_distill.json  ood_qwen_full.json  ood_qwen_projected_Alinear.json  ood_qwen_projected_Aonly.json  ood_qwen_projected_freeze.json  ood_qwen_projected_full.json  ood_split025.json  ood_split050.json  ood_split075.json  ood_toolbench_llama_full_1024.json  ood_toolbench_llama_nonparam_1024.json  ood_toolbench_llama_projected_AB_1024.json  ood_toolbench_llama_projected_Alinear_1024.json  ood_toolbench_llama_projected_Alinear_1024_seed2.json  ood_toolbench_llama_projected_Aonly_1024.json  ood_toolbench_mistral_full_1024.json  ood_toolbench_mistral_nonparam_1024.json  ood_toolbench_mistral_projected_AB_1024.json  ood_toolbench_mistral_projected_AB_1024_seed2.json  ood_toolbench_mistral_projected_AB_1024_seed3.json  (+44 more)
src/: eval_apibank.py  (+22 more)
(+15 files in other folders)
