[project]
name = "transferable-tool-adapter"
version = "0.1.0"
description = "Layerwise adapter decomposition and transfer for tool-use in language models"
readme = "README.md"
requires-python = ">=3.11,<3.12"

dependencies = [
    "numpy==1.26.4",
    "torch==2.5.1",
    "transformers==5.5.4",
    "datasets==2.19.1",
    "accelerate==1.13.0",
    "peft==0.19.1",
    "tqdm>=4.66.0",
    "gdown>=5.2.0",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "ipython>=8.0",
    "matplotlib>=3.8",
    "pandas>=2.2",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu121" }
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
